--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body, html {
   height: 100%;
   background: linear-gradient(#d0d6d9, #b1b4ba);
   color: #d0d6d9;
+  overflow: hidden;
 }
 
 body {
